--- a/index.html
+++ b/index.html
@@ -4,13 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Sketch Pad</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        #container {
+            display: flex;
+            flex-wrap: wrap;
+            width: 960px;
+            margin: 0 auto;
+        }
+
+        .square {
+            width: 60px;
+            height: 60px;
+            border: 1px solid #ccc;
+        }
+
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
     <h1>Grid Sketch Pad</h1>
     <div id="container"></div>
     <button onclick="resetGrid()">Create New Grid</button>
 
-    <script src="script.js"></script>
+    <script>
+        // Function to create the initial grid
+        function createGrid(size) {
+            const container = document.getElementById('container');
+            container.innerHTML = '';
+
+            for (let i = 0; i < size * size; i++) {
+                const square = document.createElement('div');
+                square.classList.add('square');
+                container.appendChild(square);
+            }
+
+            container.style.gridTemplateColumns = `repeat(${size}, 1fr)`;
+
+            // Add hover effect
+            const squares = document.querySelectorAll('.square');
+            squares.forEach(square => {
+                square.addEventListener('mouseover', changeColor);
+            });
+        }
+
+        // Function to reset the grid and prompt for a new size
+        function resetGrid() {
+            const size = prompt('Enter the number of squares per side (up to 100):');
+            const gridSize = parseInt(size);
+
+            if (gridSize && gridSize > 0 && gridSize <= 100) {
+                createGrid(gridSize);
+            } else {
+                alert('Invalid input. Please enter a number between 1 and 100.');
+            }
+        }
+
+        // Function to change the color of the hovered square
+        function changeColor(event) {
+            const square = event.target;
+            const currentColor = square.style.backgroundColor;
+
+            if (!currentColor) {
+                // Initial interaction, set random RGB color
+                square.style.backgroundColor = getRandomRGBColor();
+            } else {
+                // Progressive darkening effect
+                const currentOpacity = parseFloat(square.style.opacity) || 1.0;
+                if (currentOpacity > 0) {
+                    square.style.opacity = (currentOpacity - 0.1).toFixed(1);
+                }
+            }
+        }
+
+        // Function to generate random RGB color
+        function getRandomRGBColor() {
+            const r = Math.floor(Math.random() * 256);
+            const g = Math.floor(Math.random() * 256);
+            const b = Math.floor(Math.random() * 256);
+            return `rgb(${r},${g},${b})`;
+        }
+
+        // Initialize the grid with 16x16 squares
+        createGrid(16);
+    </script>
 </body>
 </html>
